--- a/Class3/app.yml
+++ b/Class3/app.yml
@@ -1,11 +1,11 @@
 - name: Download wordpress
   ansible.builtin.get_url:
     url: https://wordpress.org/latest.tar.gz
-    dest: /tmp
+    dest: /tmp/wordpress.tar.gz
 
 - name: Extract wordpress
   ansible.builtin.unarchive:
-    src: /tmp/wordpress-6.6.1.tar.gz
+    src: /tmp/wordpress.tar.gz
     dest: /tmp
     remote_src: yes
 
