--- a/Class3/mysql.yml
+++ b/Class3/mysql.yml
@@ -8,3 +8,14 @@
     name: mysql
     state: started
     enabled: yes
+
+- name: Install PyMySQL
+  ansible.builtin.apt:
+    name: python3-pymysql
+    state: present
+
+- name: Create database
+  community.mysql.mysql_db:
+    name: kaizen
+    state: present
+    login_unix_socket: /run/mysqld/mysqld.sock
