--- a/Class3/mysql.yml
+++ b/Class3/mysql.yml
@@ -19,3 +19,11 @@
     name: kaizen
     state: present
     login_unix_socket: /run/mysqld/mysqld.sock
+
+- name: Create user
+  community.mysql.mysql_user:
+    name: hello
+    password: world123
+    priv: '*.*:ALL'
+    state: present
+    login_unix_socket: /run/mysqld/mysqld.sock
