--- a/Class4/hello/tasks/main.yml
+++ b/Class4/hello/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Install apache httpd  (state=present is optional)
   ansible.builtin.apt:
-    name: apache2
+    name: "{{ package }}"
     state: present
     update_cache: yes
 
