--- a/Class4-dynamic/hosts.aws_ec2.yml
+++ b/Class4-dynamic/hosts.aws_ec2.yml
@@ -1,3 +1,14 @@
 plugin: amazon.aws.aws_ec2
 regions:
   - us-east-2
+
+filters:
+  tag:Name:
+    - dev*
+    - vm*
+
+keyed_groups:
+  - key: tags
+    prefix: kaizen
+  - key: instance_type
+    prefix: hello
